# snark-bn254-verifier

./: Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: rust.yml
examples/: README.md  fibonacci-riscv32im-succinct-zkvm-elf
examples/elf/: riscv32im-succinct-zkvm-elf
examples/groth16/elf/: riscv32im-succinct-zkvm-elf
examples/groth16/src/: main.rs
examples/plonk/elf/: riscv32im-succinct-zkvm-elf
examples/program/: Cargo.toml
examples/program/elf/: groth16  riscv32im-succinct-zkvm-elf
examples/program/src/: main.rs  plonk.rs
examples/script/: Cargo.toml  build.rs  out
examples/script/src/: main.rs
examples/wasm_example/: main.js  package.json
examples/wasm_example/data/: fibonacci_groth16_proof.json  fibonacci_plonk_proof.json  is-prime_groth16_proof.json  is-prime_plonk_proof.json  sha2_groth16_proof.json  sha2_plonk_proof.json  tendermint_groth16_proof.json  tendermint_plonk_proof.json
src/: constants.rs  converter.rs  error.rs  hash_to_field.rs  lib.rs  transcript.rs
src/groth16/: converter.rs  mod.rs  proof.rs  verify.rs
src/plonk/: converter.rs  element.rs  error.rs  kzg.rs  mod.rs  proof.rs  verify.rs
verifier/: Cargo.toml
verifier/src/: constants.rs  converter.rs  error.rs  hash_to_field.rs  lib.rs  transcript.rs  wasm.rs
verifier/src/groth16/: converter.rs  error.rs  mod.rs  verify.rs
verifier/src/plonk/: converter.rs  kzg.rs  mod.rs  verify.rs
