[package]
name = "snark-bn254-verifier"
authors = ["Bhargav Annem"]
description = "A rust verifier for BN254 curve"
repository = "https://github.com/succinctlabs/snark-bn254-verifier"
keywords = ["zero-knowledge", "cryptography", "zkSNARK", "SNARK", "gnark"]
categories = ["cryptography"]
readme = "README.md"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"
version = "1.0.2"

[dependencies]
bn = { git = "https://github.com/sp1-patches/bn", branch = "patch-v0.7.0", package = "substrate-bn" }
lazy_static = "1.5.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
rand = "0.8.5"
sha2 = "0.10.8"
thiserror = "1.0.63"
