[package]
version = "0.1.0"
name = "recursive-program"
edition = "2021"

[dependencies]
sp1-zkvm = "2.0.0"
snark-bn254-verifier = { git = "https://github.com/0xWOLAND/snark-bn254-verifier", branch = "bhargav/gnark-bn254-verifier" }
substrate-bn = { git = "https://github.com/sp1-patches/bn", branch = "patch-v0.7.0" }
