[package]
version = "0.1.0"
name = "recursive-program"
edition = "2021"

[dependencies]
sp1-zkvm = "2.0.0"
snark-bn254-verifier = { path = "../../verifier" }
substrate-bn = { git = "https://github.com/sp1-patches/bn", branch = "patch-v0.7.0" }
serde_with = "3.9.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_bytes = "0.11.15"
