[package]
version = "0.1.0"
name = "recursive-script"
edition = "2021"

[dependencies]
hex = "0.4.3"
num-bigint = "0.4.6"
num-traits = "0.2.19"
sp1-sdk = "2.0.0"
sp1-prover = "2.0.0"

[build-dependencies]
sp1-helper = "2.0.0"

[dev-dependencies]
snark-bn254-verifier = { path = "../../verifier" }
substrate-bn = { git = "https://github.com/sp1-patches/bn", branch = "patch-v0.7.0" }
